monticore-generator/src/test/resources/cocos/invalid/A4031/A4031e.mc4
/* (c) https://github.com/MontiCore/monticore */

package cocos.invalid.A4031;

grammar A4031e {
  enum a = "a";

}
